fixed dark room overflow

--- a/static/style.css
+++ b/static/style.css
@@ -48,7 +48,7 @@ body{
 
 /* LOGO */
 
-..logo{
+.logo{
     font-family:'Orbitron',sans-serif;
 
     font-size:44px;
